2005-03-14  Murray Cumming <murrayc@murrayc.com>

	* glom/document/document_glom.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/utility_widgets/db_adddel/db_adddel.cc:
	* glom/utility_widgets/db_adddel/db_adddel.h:
	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc:
	* glom/utility_widgets/db_adddel/glom_db_treemodel.h:
        Glom_Db_TreeModel::on_treeview_cell_edited(): 
	Do not set a bogus key value when a column is the 
	first to get a value, and do not mark it as no 
	longer a placeholder. This prevents a crash 
	when adding two field values without yet entereing 
	a primary value. But the primary key value is still 
	not used when it is entered. 

2005-03-14  Murray Cumming <murrayc@murrayc.com>

	* glom/box_db_table.h:
	* glom/data_structure/field.h:
	* glom/mode_data/box_data.cc:
	* glom/mode_data/box_data.h:
	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/utility_widgets/db_adddel/db_adddel.cc:
        Box_Data_Details::on_flowtable_field_edited():
        When it's a related field that was edited, 
	create a related record, where allowed by the 
	relationship, and where possible, with warnings 
	where not. This is quite a lot of code - it 
	should be abstracted so it can be used for the 
	list too.

2005-03-14  Murray Cumming  <murrayc@murrayc.com>

	* examples/example_smallbusiness.glom:
	* glom/glom_document.dtd:
	* glom/document/document_glom.cc:
	* glom/data_structure/relationship.cc:
	* glom/data_structure/relationship.h:
	Add get/set_auto_create() to specify whether 
	details and lists view should automatically 
	create related fields when the user enters 
	data into a record that does not yet exist.
	* glom/mode_design/box_db_table_relationships.cc:
	* glom/mode_design/box_db_table_relationships.h:
	on_adddel_user_activated(): Do not clear the 
	to_field when the user clicks on it.
	* glom/utility_widgets/db_adddel/db_adddel.cc:
	If allow_add is false, deactivate the Add 