@@ -1,3 +1,12 @@
+2005-03-15  Murray Cumming <murrayc@murrayc.com>
+
+	* glom/data_structure/glomconversions.cc:
+	* glom/data_structure/glomconversions.h:
+	* glom/mode_data/box_data.cc:
+	generate_next_auto_increment(): unbreak 
+	this, so that adding records works again 
+	if the primary key is auto incremented.
+
 2005-03-14  Murray Cumming <murrayc@murrayc.com>
 
 	* glom/document/document_glom.cc:
